# local-mcp

./: README.md  pyproject.toml
local_mcp/: main.py
